supplement page designing

--- a/Navabar2/supplement.html
+++ b/Navabar2/supplement.html
@@ -164,6 +164,37 @@
 </div>
 <!-- Navbar2 END -->
 
+<div class="card text-bg-dark mx-2 my-4">
+  <img src="/img/supplementimg/diabeatease.jpg" class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <h5 class="card-title fs-1 text-dark ">DiabeatEase Supplement</h5>
+    <button class="btn btn-primary px-4 my-4">Buy Now</button>
+  </div>
+</div>
+<div class="card text-bg-dark mx-2 my-4 ">
+  <img src="/img/supplementimg/digestplus.jpg" class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <h5 class="card-title fs-1">Digestplus Supplement</h5>
+    <button class="btn btn-primary px-4 my-4">Buy Now</button>
+  </div>
+</div>
+<div class="card text-bg-dark mx-2 my-4">
+  <img src="/img/supplementimg/liver.jpg" class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <h5 class="card-title fs-1">Liver Supplement</h5>
+    <button class="btn btn-primary px-4 my-4">Buy Now</button>
+
+  </div>
+</div>
+<div class="card text-bg-dark mx-2 my-4">
+  <img src="/img/supplementimg/nutriboost.jpg" class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <<h5 class="card-title fs-1">Nutri Boost Supplement</h5>
+    <button class="btn btn-primary px-4 my-4">Buy Now</button>
+   
+  </div>
+</div>
+<hr>
 <!-- Footer start -->
 <footer class="container py-4 my-1">
     <div class="row py-5">
