offer page designing

--- a/Navabar2/offers.html
+++ b/Navabar2/offers.html
@@ -164,6 +164,68 @@
 </div>
 <!-- Navbar2 END -->
 
+<h3 class="fs-2 fw-bold text-center my-1 text-primary" >Offers</h3>
+<hr class="hr-line" >
+<!-- Card making for offer page -->
+<div class="container d-flex justify-content-between my-4 w-75">
+  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3 " >
+    <div class="card ">
+      <img src="/img/offerimg/offer1.jpg" alt="">
+      <div class="card-body">
+        <div class="card-body">
+          <h3 class="card-title text-primary fw-bold">360 Health Checkup @ Rs.1799/- ONLY</h3>
+          <p class="card-text">"Contains Blood Test with 83-parameters for Heart, Liver, Kidney, Thyroid, Diabetes and Vitamin screening with Chest X-ray + ECG + BP & BMI and Free Report Counselling."</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-lg-4 mb-4 w-50  px-3" >
+    <div class="card">
+      <img src="/img/offerimg/offer2.jpg" alt="">
+      <div class="card-body">
+ <h3 class="card-title text-primary fw-bold">Flat 60% Off on all natural Supplements.</h3>
+        <p class="card-text">Get natural supplements for Diabetes, Digestion, Heart, Brain, Hair, Thyroid, Iron & Vitamin deficiency on discounted price and from Herbved.</p>
+      </div>
+     
+    </div>
+  </div>
+</div>
+<div class="container d-flex justify-content-between my-4 w-75">
+  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3 " >
+    <div class="card ">
+      <img src="/img/offerimg/offer3.jpg" alt="">
+      <div class="card-body">
+        <h3 class="card-title text-primary fw-bold">Consult top Doctors & Dietitians online starting from @ Rs.129/- ONLY</h3>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3" >
+    <div class="card">
+      <img src="/img/offerimg/offer4.jpg" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Card title that wraps to a new line</h3>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container d-flex justify-content-center my-4 w-75">
+  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3 " >
+    <div class="card ">
+      <img src="/img/offerimg/offer5.jpg" alt="">
+      <div class="card-body">
+        <h5 class="card-title">Card title that wraps to a new line</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<hr>
 <!-- Footer start -->
 <footer class="container py-4 my-1">
     <div class="row py-5">
