--- a/Navabar2/offers.html
+++ b/Navabar2/offers.html
@@ -126,61 +126,58 @@
 <!-- -------------------------------------------------------------------------------------------- -->
 <!-- -------------------------------------------------------------------------------------------- -->
 <!-- Navbar 2 START -->
-<div class="container-fluid d-flex justify-content-center">
-  <nav class="navbar navbar-expand-lg navbar-light ">
-    <a class="navbar-brand fw-bold " href="#"><span>Healthify</span></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/bloodtest.html">Blood Test</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/xray.html">X-Rays & Scans</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/geneticTesting.html">Genetic Testing</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/doctorconsultation.html">Doctor Consultation</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/surgery.html">Surgery</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/supplement.html">Supplements</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/healthtips.html">Health Tips</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/offers.html">Offers</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <a class="navbar-brand fw-bold fs-2 " href="#"><span>Healthify</span></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/bloodtest.html">Blood Test</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/xray.html">X-Rays & Scans</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/geneticTesting.html">Genetic Testing</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/doctorconsultation.html">Doctor Consultation</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/surgery.html">Surgery</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/supplement.html">Supplements</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/healthtips.html">Health Tips</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/offers.html">Offers</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <!-- Navbar2 END -->
 
 <h3 class="fs-2 fw-bold text-center my-1 text-primary" >Offers</h3>
 <hr class="hr-line" >
+
+
 <!-- Card making for offer page -->
-<div class="container d-flex justify-content-between my-4 w-75">
-  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3 " >
-    <div class="card ">
+<div class="row mb-2 my-4 mx-4">
+  <div class="col-md-6">
+    <div class="card">
       <img src="/img/offerimg/offer1.jpg" alt="">
       <div class="card-body">
-        <div class="card-body">
-          <h3 class="card-title text-primary fw-bold">360 Health Checkup @ Rs.1799/- ONLY</h3>
-          <p class="card-text">"Contains Blood Test with 83-parameters for Heart, Liver, Kidney, Thyroid, Diabetes and Vitamin screening with Chest X-ray + ECG + BP & BMI and Free Report Counselling."</p>
-        </div>
-        
+        <h3 class="card-title text-primary fw-bold">360 Health Checkup @ Rs.1799/- ONLY</h3>
+        <p class="card-text">"Contains Blood Test with 83-parameters for Heart, Liver, Kidney, Thyroid, Diabetes and Vitamin screening with Chest X-ray + ECG + BP & BMI and Free Report Counselling."</p>
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-lg-4 mb-4 w-50  px-3" >
+  <div class="col-md-6">
     <div class="card">
       <img src="/img/offerimg/offer2.jpg" alt="">
       <div class="card-body">
@@ -191,37 +188,29 @@
     </div>
   </div>
 </div>
-<div class="container d-flex justify-content-between my-4 w-75">
-  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3 " >
+
+<div class="row mb-2 my-4 mx-4">
+  <div class="col-md-6">
     <div class="card ">
       <img src="/img/offerimg/offer3.jpg" alt="">
       <div class="card-body">
         <h3 class="card-title text-primary fw-bold">Consult top Doctors & Dietitians online starting from @ Rs.129/- ONLY</h3>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Consult top Physician, Gynaecologists, Dermatologists, Diabetologists, Gastroenterologists, Cardiologists, Sexologists, ENT specialists and other specialist doctors online.</p>
       </div>
     </div>
-  </div>
-  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3" >
-    <div class="card">
-      <img src="/img/offerimg/offer4.jpg" alt="">
-      <div class="card-body">
-        <h3 class="card-title">Card title that wraps to a new line</h3>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+
+    <div class="col-md-6">
+      <div class="card">
+        <img src="/img/offerimg/offer4.jpg" alt="">
+        <div class="card-body">
+          <h3 class="card-title text-primary fw-bold">Book Doctor Consultation + Health Test & Pay only for Health Test</h3>
+          <p class="card-text">Book Health Test within 7 days of doctor consultation and get cashback of doctor consultation booking amount.</p>
+        </div>
       </div>
     </div>
-  </div>
 </div>
-<div class="container d-flex justify-content-center my-4 w-75">
-  <div class="col-sm-6 col-lg-4 mb-4 w-50 px-3 " >
-    <div class="card ">
-      <img src="/img/offerimg/offer5.jpg" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title that wraps to a new line</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
 
