navbar2 updated making it responsive

--- a/Navabar2/geneticTesting.html
+++ b/Navabar2/geneticTesting.html
@@ -126,42 +126,40 @@
 <!-- -------------------------------------------------------------------------------------------- -->
 <!-- -------------------------------------------------------------------------------------------- -->
 <!-- Navbar 2 START -->
-<div class="container-fluid d-flex justify-content-center">
-  <nav class="navbar navbar-expand-lg navbar-light ">
-    <a class="navbar-brand fw-bold " href="#"><span>Healthify</span></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/bloodtest.html">Blood Test</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/xray.html">X-Rays & Scans</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/geneticTesting.html">Genetic Testing</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/doctorconsultation.html">Doctor Consultation</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/surgery.html">Surgery</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/supplement.html">Supplements</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/healthtips.html">Health Tips</a>
-        </li>
-        <li class="nav-item nav2-item">
-          <a class="nav-link fw-bold mx-4" href="/Navabar2/offers.html">Offers</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <a class="navbar-brand fw-bold fs-2 " href="#"><span>Healthify</span></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/bloodtest.html">Blood Test</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/xray.html">X-Rays & Scans</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/geneticTesting.html">Genetic Testing</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/doctorconsultation.html">Doctor Consultation</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/surgery.html">Surgery</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/supplement.html">Supplements</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/healthtips.html">Health Tips</a>
+      </li>
+      <li class="nav-item nav2-item">
+        <a class="nav-link fw-bold mx-4" href="/Navabar2/offers.html">Offers</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <!-- Navbar2 END -->
 <!--Genetic testing  -->
 <div class="bg-primary text-white my-2 border border-warning  rounded-4">
@@ -175,13 +173,13 @@
         <button class="btn btn-danger mb-2">Know More</button>
       </div>
       <div class="col-md-4">
-       <a href=""> <img src="/img/TestImage" alt="Labs" class="img-fluid mb-2"></a>
+       <a href="#"> <img src="/img/TestImage/dexascan.jpg" alt="Labs" class="img-fluid mb-2"></a>
       </div>
     </div>
   </div>
 </div>
 <!--Genetic testing end -->
-
+<hr >
 <!-- Footer start -->
 <footer class="container py-4 my-1">
     <div class="row py-5">
